tests/ui/consts/const-eval/panic-assoc-never-type.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/panic-assoc-never-type.rs:10:21
   |
LL |     const VOID: ! = panic!();
   |                     ^^^^^^^^ evaluation of `PrintName::VOID` failed here

note: erroneous constant encountered
  --> $DIR/panic-assoc-never-type.rs:15:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/panic-assoc-never-type.rs:15:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
